--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@
                         Ahmedabad · 9099429099
                         <a href="mailto:name@email.com">bansalj2@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">A passionate troubleshooter with a penchant for
+                        continuous learning in a dynamic work setting. Known
+                        for hands-on experimentation to deepen understanding
+                        and adept at staying abreast of the latest industry
+                        trends. Actively engaged in exploring tech communities
+                        and currently advancing skills in Devops. My profile and
+                        CV provide a comprehensive overview of my
+                        professional journey, showcasing a strong foundation in
+                        troubleshooting and a commitment to ongoing
+                        personal and professional growth.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -64,34 +73,49 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">System Engineer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <div class="subheading mb-3">Tata Consultancy Services</div>
+                            <p>Technical Support location Wide: -Maintained and
+                                upgraded migrations, installed new software releases
+                                and system upgrades, and resolved software-related
+                                problems as per requirements. -Extensive use of
+                                Intune, and Azure Active Directory. -Participated in
+                                the ongoing development and implementation of the
+                                company's cloud strategy. -Cloud certified - AWS,
+                                GCP. Hands-on with practical experience. -Managing
+                                VDI Infrastructure. -Stayed abreast of current
+                                technologies and make recommendations based on
+                                knowledge andresearch. -Ensured operational
+                                readiness of the services to customers regarding
+                                availability and performance. -Implementation and
+                                Troubleshooting of endpoint security tools like
+                                Zscaler, Forcepoint DLP, Mcafee, Crowdstrike, etc. -
+                                Resolved technical problems, contributing towards
+                                improving automation and orchestration of the virtual
+                                environment on an ongoing basis to ensure the
+                                solutions continue to meet the dynamic business
+                                objectives.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sept 2021 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Project Engineer</h3>
+                            <div class="subheading mb-3">NEC Technologies India Limited</div>
+                            <p>Worked on multiple modules like AFC, DMS, and PIS.
+                                Ensure Smooth Operations and developments of
+                                the system.Participate in process improvement
+                                and cost reduction & and deliver results on a budget.
+                                Analyze root causes of issues and provide
+                                resolutions.Hands-on Experience in PostgreSQL
+                                and SQL.Sound knowledge of Apache Tomcat
+                                and BI tools like Tableau.Review inventory
+                                activities & and create stock transfers for L1 Support
+                                as required.Communicated with Clients and
+                                other forwarding hands (Vendors).Proactively
+                                Participating in management meetings and activities.
+                                </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jan 2018 - Sept 2021</span></div>
                     </div>
                 </div>
             </section>
