--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Javia</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Ahmedabad · 9099429099
+                        Ahmedabad · (+91) 9099429099 ·
                         <a href="mailto:name@email.com">bansalj2@gmail.com</a>
                     </div>
                     <p class="lead mb-5">A passionate troubleshooter with a penchant for
@@ -126,20 +126,18 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">Gujarat Technological University</h3>
+                            <div class="subheading mb-3">Bachelor of Engineering </div>
+                            <div>- Instrumentation & Control Enginnering </div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2012 - July 2018</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">HariVandana School of Science</h3>
+                            <div class="subheading mb-3">Science</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2010 - May 2012</span></div>
                     </div>
                 </div>
             </section>
@@ -160,7 +158,7 @@
                         <li class="list-inline-item"><i class="fab fa-less"></i></li>
                         <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
                         <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-aws"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
