--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <li class="list-inline-item"><i class="fa-brands fa-aws"></i></li>
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-github-square"></i></li>
-                        <li class="list-inline-item"><i class='fab fa-ubuntu' style='font-size:48px;color:red'></i></li>
+                        <li class="list-inline-item"><i class="fab fa-ubuntu"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
