--- a/index.html
+++ b/index.html
@@ -149,19 +149,19 @@
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fas fa-cloud"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-windows"></i></li>
+                        <li class="list-inline-item"><i class='fab fa-windows' style='font-size:48px;color:#004fe1'></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-server"></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-database"></i></li>
                         <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gitlab"></i></li>
+                        <li class="list-inline-item"><i class='fab fa-gitlab' style='font-size:48px;color:#E2432A'></i></li>
                         <li class="list-inline-item"><i class="fab fa-sass"></i></li>
                         <li class="list-inline-item"><i class="fab fa-docker"></i></li>
                         <li class="list-inline-item"><i class="fa-brands fa-google"></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-laptop"></i></li>
-                        <li class="list-inline-item"><i class="fa-brands fa-aws"></i></li>
+                        <li class="list-inline-item"><i class='fab fa-aws' style='font-size:48px;color:#ff9900'></i></i></li>
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-github-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-ubuntu"></i></li>
+                        <li class="list-inline-item"><i class='fab fa-github' style='font-size:48px;color:#030303'></i></li>
+                        <li class="list-inline-item"><i class='fab fa-linux' style='font-size:48px;color:#030303'></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
