--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Gujarat Technological University</h3>
                             <div class="subheading mb-3">Bachelor of Engineering </div>
-                            <div>- Instrumentation & Control Enginnering </div>
+                            <div>- Instrumentation & Control Engineering </div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2012 - July 2018</span></div>
                     </div>
@@ -148,30 +148,31 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fas fa-cloud"></i></li>
+                        <li class="list-inline-item"><i class='fas fa-cloud' style='font-size:48px;color:#A3E8FD'></i></li>
                         <li class="list-inline-item"><i class='fab fa-windows' style='font-size:48px;color:#004fe1'></i></li>
-                        <li class="list-inline-item"><i class="fa-solid fa-server"></i></li>
+                        <li class="list-inline-item"><i class='fa-solid fa-server' style='font-size:48px;color:#19306b'></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-database"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
+                        <li class="list-inline-item"><i class='fab fa-node-js' style='font-size:48px;color:#63E6BE'></i></li>
+                        <li class="list-inline-item"><i class='fab fa-github' style='font-size:48px;color:#030303'></i></li>
                         <li class="list-inline-item"><i class='fab fa-gitlab' style='font-size:48px;color:#E2432A'></i></li>
                         <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-docker"></i></li>
+                        <li class="list-inline-item"><i class='fab fa-docker' style='font-size:48px;color:#0db7ed'></i></li>
                         <li class="list-inline-item"><i class="fa-brands fa-google"></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-laptop"></i></li>
                         <li class="list-inline-item"><i class='fab fa-aws' style='font-size:48px;color:#ff9900'></i></i></li>
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class='fab fa-github' style='font-size:48px;color:#030303'></i></li>
+                        
                         <li class="list-inline-item"><i class='fab fa-linux' style='font-size:48px;color:#030303'></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            Techinical Support
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            Testing & Debugging
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -189,8 +190,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Apart from being a web developer, I enjoy most of my time being outdoors.</p>
+                    <p class="mb-0">When forced indoors, I follow a number of sci-fi, Comedy, Documentry & Action genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the world.</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -201,41 +202,29 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            Google Associate Cloud Engineer
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            Amazon Cloud Practitioner
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            Satellite Based Navigation: A Journey From GPS To Mobile Phone Platform
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
+                            National Cadet Corps - The youth wing of the Indian Armed Forces
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
+                            Scrum Foundation Professional Certificate
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             3
                             <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
+                            Place - Rifle shooiting - NCC
                         </li>
                     </ul>
                 </div>
