--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         troubleshooting and a commitment to ongoing
                         personal and professional growth.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/bansaljavia/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
@@ -155,12 +155,12 @@
                         <li class="list-inline-item"><i class='fab fa-node-js' style='font-size:48px;color:#63E6BE'></i></li>
                         <li class="list-inline-item"><i class='fab fa-github' style='font-size:48px;color:#030303'></i></li>
                         <li class="list-inline-item"><i class='fab fa-gitlab' style='font-size:48px;color:#E2432A'></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
+                        <li class="list-inline-item"><i class='fab fa-sass'  style='font-size:48px;color:red'></i></li>
                         <li class="list-inline-item"><i class='fab fa-docker' style='font-size:48px;color:#0db7ed'></i></li>
                         <li class="list-inline-item"><i class="fa-brands fa-google"></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-laptop"></i></li>
                         <li class="list-inline-item"><i class='fab fa-aws' style='font-size:48px;color:#ff9900'></i></i></li>
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                        <li class="list-inline-item"><i class='fab fa-html5' ></i></li>
                         
                         <li class="list-inline-item"><i class='fab fa-linux' style='font-size:48px;color:#030303'></i></li>
                     </ul>
