--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Website">Website</a></li>
                 </ul>
             </div>
         </nav>
@@ -59,8 +60,8 @@
                         personal and professional growth.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/bansaljavia/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://github.com/ind-ind"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://twitter.com/BANSALJAVIA"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
@@ -205,19 +206,19 @@
                             Google Associate Cloud Engineer
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class='fas fa-award' style='font-size:48px;color:#FFB404'></i></span>
                             Amazon Cloud Practitioner
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class='fas fa-award' style='font-size:48px;color:#FFB404'></i></span>
                             Satellite Based Navigation: A Journey From GPS To Mobile Phone Platform
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class='fas fa-award' style='font-size:48px;color:#FFB404'></i></span>
                             National Cadet Corps - The youth wing of the Indian Armed Forces
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class='fas fa-award' style='font-size:48px;color:#FFB404'></i></i></span>
                             Scrum Foundation Professional Certificate
                         </li>
                         <li>
