--- a/index.html
+++ b/index.html
@@ -202,23 +202,23 @@
                     <h2 class="mb-5">Awards & Certifications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class='fas fa-award' style='color:#FFB404'></i></span>
                             Google Associate Cloud Engineer
                         </li>
                         <li>
-                            <span class="fa-li"><i class='fas fa-award' style='font-size:48px;color:#FFB404'></i></span>
+                            <span class="fa-li"><i class='fas fa-award' style='color:#FFB404'></i></span>
                             Amazon Cloud Practitioner
                         </li>
                         <li>
-                            <span class="fa-li"><i class='fas fa-award' style='font-size:48px;color:#FFB404'></i></span>
+                            <span class="fa-li"><i class='fas fa-award' style='color:#FFB404'></i></span>
                             Satellite Based Navigation: A Journey From GPS To Mobile Phone Platform
                         </li>
                         <li>
-                            <span class="fa-li"><i class='fas fa-award' style='font-size:48px;color:#FFB404'></i></span>
+                            <span class="fa-li"><i class='fas fa-award' style='color:#FFB404'></i></span>
                             National Cadet Corps - The youth wing of the Indian Armed Forces
                         </li>
                         <li>
-                            <span class="fa-li"><i class='fas fa-award' style='font-size:48px;color:#FFB404'></i></i></span>
+                            <span class="fa-li"><i class='fas fa-award' style='color:#FFB404'></i></i></span>
                             Scrum Foundation Professional Certificate
                         </li>
                         <li>
