--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <li class="list-inline-item"><i class='fab fa-gitlab' style='font-size:48px;color:#E2432A'></i></li>
                         <li class="list-inline-item"><i class='fab fa-sass'  style='font-size:48px;color:red'></i></li>
                         <li class="list-inline-item"><i class='fab fa-docker' style='font-size:48px;color:#0db7ed'></i></li>
-                        <li class="list-inline-item"><i class="fa-brands fa-google"></i></li>
+                        <li class="list-inline-item"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/terraform/terraform-original.svg" /></li>
                         <li class="list-inline-item"><i class="fa-solid fa-laptop"></i></li>
                         <li class="list-inline-item"><i class='fab fa-aws' style='font-size:48px;color:#ff9900'></i></i></li>
                         <li class="list-inline-item"><i class='fab fa-html5' ></i></li>
