--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <p>Technical Support location Wide: -Maintained and
                                 upgraded migrations, installed new software releases
                                 and system upgrades, and resolved software-related
-                                problems as per requirements. -Extensive use of
+                                problems as per requirements. -Working on
                                 Intune, and Azure Active Directory. -Participated in
                                 the ongoing development and implementation of the
                                 company's cloud strategy. -Cloud certified - AWS,
