--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <h3 class="mb-0">System Engineer</h3>
                             <div class="subheading mb-3">Tata Consultancy Services</div>
                             <p>Technical Support location Wide: -Maintained and
-                                upgraded migrations, installed new software releases
+                                upgraded migrations installed new software releases
                                 and system upgrades, and resolved software-related
                                 problems as per requirements. -Working on
                                 Intune, and Azure Active Directory. -Participated in
@@ -85,7 +85,7 @@
                                 GCP. Hands-on with practical experience. -Managing
                                 VDI Infrastructure. -Stayed abreast of current
                                 technologies and make recommendations based on
-                                knowledge andresearch. -Ensured operational
+                                knowledge and research. -Ensured operational
                                 readiness of the services to customers regarding
                                 availability and performance. -Implementation and
                                 Troubleshooting of endpoint security tools like
@@ -104,15 +104,15 @@
                             <div class="subheading mb-3">NEC Technologies India Limited</div>
                             <p>Worked on multiple modules like AFC, DMS, and PIS.
                                 Ensure Smooth Operations and developments of
-                                the system.Participate in process improvement
+                                the system. Participate in process improvement
                                 and cost reduction & and deliver results on a budget.
                                 Analyze root causes of issues and provide
                                 resolutions.Hands-on Experience in PostgreSQL
                                 and SQL.Sound knowledge of Apache Tomcat
-                                and BI tools like Tableau.Review inventory
+                                and BI tools like Tableau. Review inventory
                                 activities & and create stock transfers for L1 Support
                                 as required.Communicated with Clients and
-                                other forwarding hands (Vendors).Proactively
+                                other forwarding hands (Vendors). Proactively
                                 Participating in management meetings and activities.
                                 </p>
                         </div>
@@ -169,7 +169,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Techinical Support
+                            Technical Support
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -177,7 +177,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            Cross-Functional Teams
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -191,8 +191,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi, Comedy, Documentry & Action genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the world.</p>
+                    <p>Apart from being an Infrastructure Support Engineer, I enjoy most of my time being outdoors.</p>
+                    <p class="mb-0">When forced indoors, I follow a number of sci-fi, Comedy, Documentary & Action genre movies and television shows, I am an aspiring Foodie, and I spend a large amount of my free time exploring the latest technology advancements in the world.</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -225,7 +225,7 @@
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             3
                             <sup>rd</sup>
-                            Place - Rifle shooiting - NCC
+                            Place - Rifle shooting - NCC
                         </li>
                     </ul>
                 </div>
