--- a/index.html
+++ b/index.html
@@ -230,6 +230,15 @@
                     </ul>
                 </div>
             </section>
+            <hr class="m-0" />
+            <!-- Websites-->
+            <section class="resume-section" id="interests">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Website</h2>
+                    <p>cloud-astro-website.pages.dev</p>
+                </div>
+            </section>
+            <hr class="m-0" />
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
