--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Websites-->
-            <section class="resume-section" id="interests">
+            <!-- Website-->
+            <section class="resume-section" id="website">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Website</h2>
-                    <p>cloud-astro-website.pages.dev</p>
+                    <a href="www. cloud-astro-website.pages.dev">Astro Website</a>
                 </div>
             </section>
             <hr class="m-0" />
