--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             </section>
             <hr class="m-0" />
             <!-- Website-->
-            <section class="resume-section" id="website">
+            <section class="resume-section" id="Website">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Website</h2>
                     <a href="www. cloud-astro-website.pages.dev">Astro Website</a>
