--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Website</h2>
                     </p><a href="www.cloud-astro-website.pages.dev">Astro Website</a>Redirect</p>
+                    <a href="www.cloud-astro-website.pages.dev" target="Astro Website"></a>
                 </div>
             </section>
             <hr class="m-0" />
