--- a/index.html
+++ b/index.html
@@ -235,8 +235,7 @@
             <section class="resume-section" id="Website">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Website</h2>
-                    </p><a href="www.cloud-astro-website.pages.dev">Astro Website</a>Redirect</p>
-                    <a href="www.cloud-astro-website.pages.dev" target="Astro Website"></a>
+                    <a href="www.cloud-astro-website.pages.dev" target="_self">Astro Website</a>
                 </div>
             </section>
             <hr class="m-0" />
