--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
                         <li class="list-inline-item"><i class="fa-solid fa-laptop"></i></li>
                         <li class="list-inline-item"><i class='fab fa-aws' style='font-size:48px;color:#ff9900'></i></i></li>
                         <li class="list-inline-item"><i class='fab fa-html5' ></i></li>
+                         <li class="list-inline-item"><i class="fa-brands fa-linux fa-bounce" style="color: #050505;"></i>
                         
                         <li class="list-inline-item"><i class='fab fa-linux' style='font-size:48px;color:#030303'></i></li>
                     </ul>
