--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
                         <li class="list-inline-item"><i class='fab fa-docker' style='font-size:48px;color:#0db7ed'></i></li>
                         <li class="list-inline-item"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/terraform/terraform-original.svg" /></li>
                         <li class="list-inline-item"><i class="fa-solid fa-laptop"></i></li>
-                        <li class="list-inline-item"><i class='fab fa-aws' style='font-size:48px;color:#ff9900'></i></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-aws fa-spin" style='font-size:48px;color:#ff9900'></i></i></li>
                         <li class="list-inline-item"><i class='fab fa-html5' ></i></li>
-                         <li class="list-inline-item"><i class="fa-brands fa-linux fa-bounce" style="color: #050505;"></i>
+                        <li class="list-inline-item"><i class="fa-brands fa-linux fa-bounce" style="color: #050505"></i>
                         
                         <li class="list-inline-item"><i class='fab fa-linux' style='font-size:48px;color:#030303'></i></li>
                     </ul>
