--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class='fas fa-cloud' style='font-size:48px;color:#A3E8FD'></i></li>
                         <li class="list-inline-item"><i class='fab fa-windows' style='font-size:48px;color:#004fe1'></i></li>
-                        <li class="list-inline-item"><i class='fa-solid fa-server' style='font-size:48px;color:#19306b'></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-database"></i></li>
                         <li class="list-inline-item"><i class='fab fa-node-js' style='font-size:48px;color:#63E6BE'></i></li>
                         <li class="list-inline-item"><i class='fab fa-github' style='font-size:48px;color:#030303'></i></li>
                         <li class="list-inline-item"><i class='fab fa-gitlab' style='font-size:48px;color:#E2432A'></i></li>
+                        <li class="list-inline-item"><i class='fa-solid fa-server' style='font-size:48px;color:#19306b'></i></li>
                         <li class="list-inline-item"><i class='fab fa-sass'  style='font-size:48px;color:red'></i></li>
                         <li class="list-inline-item"><i class='fab fa-docker' style='font-size:48px;color:#0db7ed'></i></li>
-                        <li class="list-inline-item"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/terraform/terraform-original.svg" /></li>
+                        <li class="list-inline-item"><i class='fab fa-github' style='font-size:48px;color:#030303'></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-laptop"></i></li>
                         <li class="list-inline-item"><i class="fa-brands fa-aws fa-spin" style='font-size:48px;color:#ff9900'></i></i></li>
                         <li class="list-inline-item"><i class='fab fa-html5' ></i></li>
