--- a/index.html
+++ b/index.html
@@ -73,6 +73,30 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">System & Network Administrator</h3>
+                            <div class="subheading mb-3">Tata Consultancy Services</div>
+                            <p>- Troubleshoot and resolve network connectivity
+                                issues across LAN, WAN, and wireless networks.
+                                - Respond to and manage incoming support tickets,
+                                escalating issues as necessary.
+                                - Provide technical support to internal teams and
+                                clients via email, chat, and phone.
+                                - Manage firewall configurations, security profiles,
+                                IPsec VPNs, and intrusion prevention measures.
+                                - Conduct network audits and apply necessary
+                                patches, updates, and firmware upgrades.
+                                - Assist with disaster recovery planning, including
+                                data backup and network failover strategies.
+                                - Managing Windows and Linux servers.
+                                - Document network changes, update network
+                                diagrams, and maintain accurate system records.
+                                - Implement and scale network infrastructure to
+                                support business growth and operational needs.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2025 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">System Engineer</h3>
                             <div class="subheading mb-3">Tata Consultancy Services</div>
                             <p>Technical Support location Wide: -Maintained and
@@ -96,7 +120,7 @@
                                 solutions continue to meet the dynamic business
                                 objectives.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Sept 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sept 2021 - Mar 2025</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -182,6 +206,14 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Agile Development & Scrum
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            System Administration
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Network Administration
                         </li>
                     </ul>
                 </div>
