--- a/index.html
+++ b/index.html
@@ -176,7 +176,6 @@
                         <li class="list-inline-item"><i class='fas fa-cloud' style='font-size:48px;color:#A3E8FD'></i></li>
                         <li class="list-inline-item"><i class='fab fa-windows' style='font-size:48px;color:#004fe1'></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-database"></i></li>
-                        <li class="list-inline-item"><i class='fab fa-github' style='font-size:48px;color:#030303'></i></li>
                         <li class="list-inline-item"><i class='fab fa-gitlab' style='font-size:48px;color:#E2432A'></i></li>
                         <li class="list-inline-item"><i class='fa-solid fa-server' style='font-size:48px;color:#19306b'></i></li>
                         <li class="list-inline-item"><i class='fab fa-sass'  style='font-size:48px;color:red'></i></li>
@@ -235,11 +234,19 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class='fas fa-award' style='color:#FFB404'></i></span>
+                            AWS Certified Solutions Architect – Associate
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class='fas fa-award' style='color:#FFB404'></i></span>
                             Google Associate Cloud Engineer
                         </li>
                         <li>
                             <span class="fa-li"><i class='fas fa-award' style='color:#FFB404'></i></span>
                             Amazon Cloud Practitioner
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class='fas fa-award' style='color:#FFB404'></i></span>
+                            ITIL 4 Foundation (Internatl)
                         </li>
                         <li>
                             <span class="fa-li"><i class='fas fa-award' style='color:#FFB404'></i></span>
