--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">System & Network Administrator</h3>
+                            <h3 class="mb-0">System Administrator</h3>
                             <div class="subheading mb-3">Tata Consultancy Services</div>
                             <p>- Troubleshoot and resolve network connectivity
                                 issues across LAN, WAN, and wireless networks.
@@ -188,7 +188,7 @@
                         
                         <li class="list-inline-item"><i class='fab fa-linux' style='font-size:48px;color:#030303'></i></li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Qualities</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -246,7 +246,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class='fas fa-award' style='color:#FFB404'></i></span>
-                            ITIL 4 Foundation (Internatl)
+                            ITIL 4 Foundation (Internal)
                         </li>
                         <li>
                             <span class="fa-li"><i class='fas fa-award' style='color:#FFB404'></i></span>
